@startuml

title __ Class Diagram__\n

  namespace com.pis.buy2gether {
    namespace usecases.home {
      namespace favoriteList {
        class com.pis.buy2gether.usecases.home.favoriteList.FavoriteFragment {
            + deleteFavorite()
            + onClick()
            + onCreateView()
            + onDestroyView()
            + onItemClick()
            - setList()
        }
      }
    }
  }


  namespace com.pis.buy2gether {
    namespace usecases.home {
      namespace favoriteList {
        class com.pis.buy2gether.usecases.home.favoriteList.FavoriteListAdapter {
            - groupChecked : LinkedHashMap<String, Boolean>
            - groupImage : LinkedHashMap<String, Bitmap>
            - groups : LinkedHashMap<String, String>
            - mInflater : LayoutInflater
            + addGroup()
            + getItemCount()
            + onBindViewHolder()
            + onCreateViewHolder()
            + removeGroup()
            ~ FavoriteListAdapter()
            ~ getItem()
            ~ isChecked()
            ~ setClickListener()
        }
      }
    }
  }


  namespace com.pis.buy2gether {
    namespace usecases.home {
      namespace favoriteList {
        interface com.pis.buy2gether.usecases.home.favoriteList.FavoriteListAdapter.ItemClickListener {
            {abstract} + onItemClick()
        }
      }
    }
  }


  namespace com.pis.buy2gether {
    namespace usecases.home {
      namespace favoriteList {
        class com.pis.buy2gether.usecases.home.favoriteList.FavoriteListAdapter.ViewHolder {
            ~ checked : RadioButton
            ~ imageView : ImageView
            ~ myTextView : TextView
            + onClick()
            ~ ViewHolder()
        }
      }
    }
  }


  namespace com.pis.buy2gether {
    namespace usecases.home {
      namespace favoriteList {
        class com.pis.buy2gether.usecases.home.favoriteList.FavoriteViewModel {
            + FavoriteViewModel()
            + delete()
            + getFavorite()
            + getGroup()
            + getUser()
        }
      }
    }
  }

  namespace com.pis.buy2gether {
    namespace usecases.home {
      namespace home {
        namespace product_view {
          namespace group.creation {
            class com.pis.buy2gether.usecases.home.home.product_view.group.creation.GroupCreationFragment {
                - GALLERY_IMAGE_CODE : int
                - TAKE_IMAGE_CODE : int
                - defaultMessage : String
                - groupID : String
                - groupVisibility : int
                + onActivityResult()
                + onClick()
                + onCreateView()
                + onDestroyView()
                + onItemClick()
                + showFailureAlert()
                ~ saveGroupImageDB()
                - setList()
                - showMediaDialog()
            }
          }
        }
      }
    }
  }


  namespace com.pis.buy2gether {
    namespace usecases.home {
      namespace home {
        namespace product_view {
          namespace group.creation {
            class com.pis.buy2gether.usecases.home.home.product_view.group.creation.GroupCreationViewModel {
                + SendInvite()
                + createGroupDB()
                + getFriends()
                + getUser()
                + getUserName()
                + shakeError()
            }
          }
        }
      }
    }
  }
 namespace com.pis.buy2gether {
    namespace usecases.home {
      namespace home {
        namespace product_view {
          namespace group.share {
            class com.pis.buy2gether.usecases.home.home.product_view.group.share.FriendListAdapter {
                - mData : LinkedHashMap<String, String>
                - mInflater : LayoutInflater
                + FriendListAdapter()
                + addUser()
                + getItemCount()
                + getUserID()
                + getUserName()
                + onBindViewHolder()
                + onCreateViewHolder()
                ~ getUserID()
            }
          }
        }
      }
    }
  }


  namespace com.pis.buy2gether {
    namespace usecases.home {
      namespace home {
        namespace product_view {
          namespace group.share {
            interface com.pis.buy2gether.usecases.home.home.product_view.group.share.FriendListAdapter.ItemClickListener {
                {abstract} + onItemClick()
            }
          }
        }
      }
    }
  }


  namespace com.pis.buy2gether {
    namespace usecases.home {
      namespace home {
        namespace product_view {
          namespace group.share {
            class com.pis.buy2gether.usecases.home.home.product_view.group.share.FriendListAdapter.ViewHolder {
                ~ inviteButton : MaterialButton
                ~ myTextView : TextView
                + onClick()
                ~ ViewHolder()
            }
          }
        }
      }
    }
  }


  com.pis.buy2gether.usecases.home.home.product_view.group.share.FriendListAdapter o-- com.pis.buy2gether.usecases.home.home.product_view.group.share.FriendListAdapter.ItemClickListener : mClickListener
  com.pis.buy2gether.usecases.home.home.product_view.group.share.FriendListAdapter +-down- com.pis.buy2gether.usecases.home.home.product_view.group.share.FriendListAdapter.ItemClickListener
  com.pis.buy2gether.usecases.home.home.product_view.group.share.FriendListAdapter +-down- com.pis.buy2gether.usecases.home.home.product_view.group.share.FriendListAdapter.ViewHolder

  namespace com.pis.buy2gether {
    namespace usecases.home {
      namespace notifications {
        class com.pis.buy2gether.usecases.home.notifications.NotificationsFragment {
            + onCreateView()
            + onDestroyView()
            + onItemClick()
            - acceptNoti()
            - denyNoti()
            - setList()
        }
      }
    }
  }


  namespace com.pis.buy2gether {
    namespace usecases.home {
      namespace notifications {
        class com.pis.buy2gether.usecases.home.notifications.NotificationsListAdapter {
            - fromUserName : LinkedHashMap<String, String>
            - groupName : LinkedHashMap<String, String>
            - mInflater : LayoutInflater
            - mType : LinkedHashMap<String, notiType>
            - specialID : LinkedHashMap<String, String>
            + addNotification()
            + getExtraID()
            + getItemCount()
            + getNotiID()
            + getNotiType()
            + onBindViewHolder()
            + onCreateViewHolder()
            + swipe()
            ~ NotificationsListAdapter()
            ~ getItem()
            ~ setClickListener()
        }
      }
    }
  }


  namespace com.pis.buy2gether {
    namespace usecases.home {
      namespace notifications {
        interface com.pis.buy2gether.usecases.home.notifications.NotificationsListAdapter.ItemClickListener {
            {abstract} + onItemClick()
        }
      }
    }
  }


  namespace com.pis.buy2gether {
    namespace usecases.home {
      namespace notifications {
        class com.pis.buy2gether.usecases.home.notifications.NotificationsListAdapter.ViewHolder {
            ~ acceptButton : ImageView
            ~ denyButton : ImageView
            ~ myTextView : TextView
            + onClick()
            ~ ViewHolder()
        }
      }
    }
  }


  namespace com.pis.buy2gether {
    namespace usecases.home {
      namespace notifications {
        enum notiType {
          FRIEND_REQUEST
          GROUP_INVITE
          PURCHASE_REVIEW
        }
      }
    }
  }


  namespace com.pis.buy2gether {
    namespace usecases.home {
      namespace notifications {
        class com.pis.buy2gether.usecases.home.notifications.NotificationsViewModel {
            + addFriend()
            + getFriendRequests()
            + getGroup()
            + getGroupInvites()
            + getUser()
            + getUserName()
            + joinGroup()
            + removeFriendRequest()
            + removeGroupInvite()
        }
      }
    }
  }


  com.pis.buy2gether.usecases.home.notifications.NotificationsFragment .up.|> com.pis.buy2gether.usecases.home.notifications.NotificationsListAdapter.ItemClickListener
  com.pis.buy2gether.usecases.home.notifications.NotificationsFragment o-- com.pis.buy2gether.usecases.home.notifications.NotificationsListAdapter : notificationsListAdapter
  com.pis.buy2gether.usecases.home.notifications.NotificationsFragment o-- com.pis.buy2gether.usecases.home.notifications.NotificationsViewModel : notificationsViewModel
  com.pis.buy2gether.usecases.home.notifications.NotificationsListAdapter o-- com.pis.buy2gether.usecases.home.notifications.NotificationsListAdapter.ItemClickListener : mClickListener
  com.pis.buy2gether.usecases.home.notifications.NotificationsListAdapter +-down- com.pis.buy2gether.usecases.home.notifications.NotificationsListAdapter.ItemClickListener
  com.pis.buy2gether.usecases.home.notifications.NotificationsListAdapter +-down- com.pis.buy2gether.usecases.home.notifications.NotificationsListAdapter.ViewHolder
  com.pis.buy2gether.usecases.home.notifications.NotificationsListAdapter +-down- com.pis.buy2gether.usecases.home.notifications.NotificationsListAdapter.notiType


  com.pis.buy2gether.usecases.home.home.product_view.group.creation.GroupCreationFragment .up.|> com.pis.buy2gether.usecases.home.home.product_view.group.share.FriendListAdapter.ItemClickListener
  com.pis.buy2gether.usecases.home.home.product_view.group.creation.GroupCreationFragment o-- com.pis.buy2gether.usecases.home.home.product_view.group.share.FriendListAdapter : friendListAdapter
  com.pis.buy2gether.usecases.home.home.product_view.group.creation.GroupCreationFragment o-- com.pis.buy2gether.usecases.home.home.product_view.group.creation.GroupCreationViewModel : groupCreationViewModel

  com.pis.buy2gether.usecases.home.favoriteList.FavoriteFragment .up.|> com.pis.buy2gether.usecases.home.favoriteList.FavoriteListAdapter.ItemClickListener
  com.pis.buy2gether.usecases.home.favoriteList.FavoriteFragment o-- com.pis.buy2gether.usecases.home.favoriteList.FavoriteListAdapter : favoriteListAdapter
  com.pis.buy2gether.usecases.home.favoriteList.FavoriteFragment o-- com.pis.buy2gether.usecases.home.favoriteList.FavoriteViewModel : favoriteViewModel
  com.pis.buy2gether.usecases.home.favoriteList.FavoriteListAdapter o-- com.pis.buy2gether.usecases.home.favoriteList.FavoriteListAdapter.ItemClickListener : mClickListener
  com.pis.buy2gether.usecases.home.favoriteList.FavoriteListAdapter +-down- com.pis.buy2gether.usecases.home.favoriteList.FavoriteListAdapter.ItemClickListener
  com.pis.buy2gether.usecases.home.favoriteList.FavoriteListAdapter +-down- com.pis.buy2gether.usecases.home.favoriteList.FavoriteListAdapter.ViewHolder


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
